# This is the full fwbackups changelog, with detailed listing of changes between
# various versions dating all the way back from the very beginning.

|| Version 1.43.3rc3 changes ||
  * Tue Jul 27 2009 Stewart Adam <s.adam at diffingo.com>
    - Tweaks to better support non-/usr/share install locations
    - Import most things after bug reporting system is initialized in order to
      display dependency errors graphically
    - Better cleanup when running "make uninstall"

  * Thu Jul 23 2009 Stewart Adam <s.adam at diffingo.com>
    - Fix a problem which caused one-time backups to fail

|| Version 1.43.3rc2 changes ||
  * Thu May 28 2009 Stewart Adam <s.adam at diffingo.com>
    - Fix a problem where paths ending in an apostrophe could be cause an
      error while running backup operations
    - Fix arguments to sftp.put in backup.py so that the backup filename does
      not have basename() run twice on it
    - Fix a problem where outputting a list of installed packages on systems
      using Pacman or RPM would cause a backup to fail

  * Wed May 27 2009 Stewart Adam <s.adam at diffingo.com>
    - Properly disable incremental option in UI for one-time backups
    - Add a status property to better handle operation progress updates

  * Mon May 25 2009 Stewart Adam <s.adam at diffingo.com>
    - When applicable, check if pywin32 is installed

  * Tue May 18 2009 Stewart Adam <s.adam at diffingo.com>
    - Fix a problem where old backups on remote hosts were not removed
    - Upload files directly to remote host if rsync engine is used

  * Mon May 17 2009 Stewart Adam <s.adam at diffingo.com>
    - Properly detect folder/file over SFTP
    - Enable thread error handling: "retval == None" instead of isAlive()

  * Tue May 12 2009 Stewart Adam <s.adam at diffingo.com>
    - Replace all instances of /usr/share with INSTALL_DIR
    - Fix problem where selecting a destination folder, then switching to remote
      host as a destination could cause the backup to fail